--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
 		"@babel/preset-typescript": "^7.13.0",
 		"@cloudflare/workers-types": "^2.2.2",
 		"babel-loader": "^8.2.2",
-		"typescript": "^4.2.4",
-		"webpack": "^5.36.2",
-		"webpack-cli": "^4.7.0"
+		"typescript": "^4.2.4"
 	},
 	"dependencies": {
 		"@cfworker/web": "^1.6.11",
