--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,7 @@
             "@cloudflare/workers-types"
         ],
     },
-    "exclude": ["node_modules"]
+    "exclude": [
+        "node_modules"
+    ]
 }
